--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
 <head>
-  <title>’Sup, Bitches!</title>
-  <meta name=“author” content=“Jaime Fox”
+  <title>'Sup, Bitches!</title>
+  <meta name="author" content="Jaime Fox"
 </head>
 <body>
 
-<h1>’Sup, Bitches!</h1>
+<h1>'Sup, Bitches!</h1>
 
 </body>
 </html>
